--- a/latex/classCategoryADT.tex
+++ b/latex/classCategoryADT.tex
@@ -11,8 +11,7 @@ The \mbox{\hyperlink{classCategoryADT}{Category\+A\+DT}} class describes a categ
 
 
 
-Inheritance diagram for Category\+A\+DT\+:
-\nopagebreak
+Inheritance diagram for Category\+A\+DT\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
