--- a/latex/classDailyStock.tex
+++ b/latex/classDailyStock.tex
@@ -2,7 +2,8 @@
 \label{classDailyStock}\index{DailyStock@{DailyStock}}
 
 
-Collaboration diagram for Daily\+Stock\+:\nopagebreak
+Collaboration diagram for Daily\+Stock\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
