--- a/latex/classDailyWeather.tex
+++ b/latex/classDailyWeather.tex
@@ -28,29 +28,22 @@ Collaboration diagram for Daily\+Weather\+:
 \begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classDailyWeather_a6e48747ff1d99f5e1ed6c2d0d8fb927d}{Daily\+Weather\+::$\sim$\+Daily\+Weather}} destructor. \end{DoxyCompactList}\item 
 float \mbox{\hyperlink{classDailyWeather_a6e464e99f25e833e68e15435a38aa7d4}{get\+Temp\+Faren}} () const
 \begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classDailyWeather_a6e464e99f25e833e68e15435a38aa7d4}{Daily\+Weather\+::get\+Temp\+Faren}} getter for temp\+Faren. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}\label{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}} 
-float {\bfseries get\+Temp\+Celsius} () const
-\item 
-\mbox{\Hypertarget{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}\label{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}} 
-std\+::string {\bfseries get\+Description} () const
-\item 
-\mbox{\Hypertarget{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}\label{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}} 
-\mbox{\hyperlink{classDate}{Date}} {\bfseries get\+Date} () const
-\end{DoxyCompactItemize}
+float \mbox{\hyperlink{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}{get\+Temp\+Celsius}} () const
+\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}{Daily\+Weather\+::get\+Temp\+Celsius}} getter for temp\+Celsius. \end{DoxyCompactList}\item 
+std\+::string \mbox{\hyperlink{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}{get\+Description}} () const
+\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}{Daily\+Weather\+::get\+Description}} getter for description. \end{DoxyCompactList}\item 
+\mbox{\hyperlink{classDate}{Date}} \mbox{\hyperlink{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}{get\+Date}} () const
+\begin{DoxyCompactList}\small\item\em \mbox{\hyperlink{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}{Daily\+Weather\+::get\+Date}} getter for date. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{classDailyWeather_a9993e2015eb9cbef4cd406707e9c3583}\label{classDailyWeather_a9993e2015eb9cbef4cd406707e9c3583}} 
-float {\bfseries temp\+Faren}
+float \mbox{\hyperlink{classDailyWeather_a9993e2015eb9cbef4cd406707e9c3583}{temp\+Faren}}
 \item 
-\mbox{\Hypertarget{classDailyWeather_a21e4e2bece27e85ef1c356eab21c7ecf}\label{classDailyWeather_a21e4e2bece27e85ef1c356eab21c7ecf}} 
-float {\bfseries temp\+Celsius}
+float \mbox{\hyperlink{classDailyWeather_a21e4e2bece27e85ef1c356eab21c7ecf}{temp\+Celsius}}
 \item 
-\mbox{\Hypertarget{classDailyWeather_ab1c37aebae263b5f7cc3a8d8e0b70807}\label{classDailyWeather_ab1c37aebae263b5f7cc3a8d8e0b70807}} 
-std\+::string {\bfseries description}
+std\+::string \mbox{\hyperlink{classDailyWeather_ab1c37aebae263b5f7cc3a8d8e0b70807}{description}}
 \item 
-\mbox{\Hypertarget{classDailyWeather_a377bf6919c9471de16bf49e45a36846e}\label{classDailyWeather_a377bf6919c9471de16bf49e45a36846e}} 
-\mbox{\hyperlink{classDate}{Date}} {\bfseries date}
+\mbox{\hyperlink{classDate}{Date}} \mbox{\hyperlink{classDailyWeather_a377bf6919c9471de16bf49e45a36846e}{date}}
 \end{DoxyCompactItemize}
 
 
@@ -96,6 +89,51 @@ Constructs a \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}} with temperatu
 Destructor for \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}}. Does not do anything, as there is no dynamically allocated memory to free 
 
 \doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}\label{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}} 
+\index{DailyWeather@{DailyWeather}!getDate@{getDate}}
+\index{getDate@{getDate}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{getDate()}{getDate()}}
+{\footnotesize\ttfamily \mbox{\hyperlink{classDate}{Date}} Daily\+Weather\+::get\+Date (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const}
+
+
+
+\mbox{\hyperlink{classDailyWeather_a6316215921a5e3175ea4700c2cace2a8}{Daily\+Weather\+::get\+Date}} getter for date. 
+
+returns the \mbox{\hyperlink{classDate}{Date}} of this \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}}
+
+\begin{DoxyReturn}{Returns}
+the \mbox{\hyperlink{classDate}{Date}} of this \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}} 
+\end{DoxyReturn}
+\mbox{\Hypertarget{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}\label{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}} 
+\index{DailyWeather@{DailyWeather}!getDescription@{getDescription}}
+\index{getDescription@{getDescription}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{getDescription()}{getDescription()}}
+{\footnotesize\ttfamily std\+::string Daily\+Weather\+::get\+Description (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const}
+
+
+
+\mbox{\hyperlink{classDailyWeather_a94635e6c9db2d2a7b10043ab256c8261}{Daily\+Weather\+::get\+Description}} getter for description. 
+
+returns the verbal desription of the forecast (i.\+e. cloudy)
+
+\begin{DoxyReturn}{Returns}
+the description of the forecast for this \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}} 
+\end{DoxyReturn}
+\mbox{\Hypertarget{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}\label{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}} 
+\index{DailyWeather@{DailyWeather}!getTempCelsius@{getTempCelsius}}
+\index{getTempCelsius@{getTempCelsius}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{getTempCelsius()}{getTempCelsius()}}
+{\footnotesize\ttfamily float Daily\+Weather\+::get\+Temp\+Celsius (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const}
+
+
+
+\mbox{\hyperlink{classDailyWeather_a8cef4af97313ee7c1160be8c2b4ed13a}{Daily\+Weather\+::get\+Temp\+Celsius}} getter for temp\+Celsius. 
+
+returns the temperature for the \mbox{\hyperlink{classDailyWeather}{Daily\+Weather}} in Celsius
+
+\begin{DoxyReturn}{Returns}
+the temperature for the day in celsius 
+\end{DoxyReturn}
 \mbox{\Hypertarget{classDailyWeather_a6e464e99f25e833e68e15435a38aa7d4}\label{classDailyWeather_a6e464e99f25e833e68e15435a38aa7d4}} 
 \index{DailyWeather@{DailyWeather}!getTempFaren@{getTempFaren}}
 \index{getTempFaren@{getTempFaren}!DailyWeather@{DailyWeather}}
@@ -112,6 +150,33 @@ returns the temperature for the \mbox{\hyperlink{classDailyWeather}{Daily\+Weath
 the temperature for the day in Fahrenheit 
 \end{DoxyReturn}
 
+
+\doxysubsection{Member Data Documentation}
+\mbox{\Hypertarget{classDailyWeather_a377bf6919c9471de16bf49e45a36846e}\label{classDailyWeather_a377bf6919c9471de16bf49e45a36846e}} 
+\index{DailyWeather@{DailyWeather}!date@{date}}
+\index{date@{date}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{date}{date}}
+{\footnotesize\ttfamily \mbox{\hyperlink{classDate}{Date}} Daily\+Weather\+::date\hspace{0.3cm}{\ttfamily [private]}}
+
+date that the Daily Weather describes \mbox{\Hypertarget{classDailyWeather_ab1c37aebae263b5f7cc3a8d8e0b70807}\label{classDailyWeather_ab1c37aebae263b5f7cc3a8d8e0b70807}} 
+\index{DailyWeather@{DailyWeather}!description@{description}}
+\index{description@{description}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{description}{description}}
+{\footnotesize\ttfamily std\+::string Daily\+Weather\+::description\hspace{0.3cm}{\ttfamily [private]}}
+
+verbal description of the weather (i.\+e. cloudy) \mbox{\Hypertarget{classDailyWeather_a21e4e2bece27e85ef1c356eab21c7ecf}\label{classDailyWeather_a21e4e2bece27e85ef1c356eab21c7ecf}} 
+\index{DailyWeather@{DailyWeather}!tempCelsius@{tempCelsius}}
+\index{tempCelsius@{tempCelsius}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{tempCelsius}{tempCelsius}}
+{\footnotesize\ttfamily float Daily\+Weather\+::temp\+Celsius\hspace{0.3cm}{\ttfamily [private]}}
+
+temperature in Celsius \mbox{\Hypertarget{classDailyWeather_a9993e2015eb9cbef4cd406707e9c3583}\label{classDailyWeather_a9993e2015eb9cbef4cd406707e9c3583}} 
+\index{DailyWeather@{DailyWeather}!tempFaren@{tempFaren}}
+\index{tempFaren@{tempFaren}!DailyWeather@{DailyWeather}}
+\doxysubsubsection{\texorpdfstring{tempFaren}{tempFaren}}
+{\footnotesize\ttfamily float Daily\+Weather\+::temp\+Faren\hspace{0.3cm}{\ttfamily [private]}}
+
+temperature in Fahrenheit 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
