--- a/latex/classRecord.tex
+++ b/latex/classRecord.tex
@@ -11,8 +11,7 @@ Inheritance diagram for Record\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Record\+:
-\nopagebreak
+Collaboration diagram for Record\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
