--- a/latex/classWeatherRecord.tex
+++ b/latex/classWeatherRecord.tex
@@ -20,8 +20,7 @@ Inheritance diagram for Weather\+Record\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for Weather\+Record\+:
-\nopagebreak
+Collaboration diagram for Weather\+Record\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
