--- a/latex/classNewsWindow.tex
+++ b/latex/classNewsWindow.tex
@@ -11,8 +11,7 @@ Inheritance diagram for News\+Window\+:\nopagebreak
 \end{figure}
 
 
-Collaboration diagram for News\+Window\+:
-\nopagebreak
+Collaboration diagram for News\+Window\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
